postgresql-common (39) unstable; urgency=low

  * Add t/090_multicluster.t: Test multicluster operation and environment
    variable handling (PGCLUSTER, PGPORT).

 -- Martin Pitt <mpitt@debian.org>  Thu, 29 Dec 2005 19:39:16 +0100

postgresql-common (38) unstable; urgency=low

  * pg_ctlcluster: Remove --setuid option, it does not make too much sense
    after all and only confuses users. Closes: #343063
  * Remove pg_ctlcluster's -s option from all scripts.
  * pg_wrapper: Fix 'postgreqsl' typo in POD. Closes: #343938
  * pg_createcluster: Do not simply close STDOUT, but reopen it to /dev/null
    to avoid initdb complaining about invalid filehandles. Closes: #344180
  * debian/init.d-functions: Check if the requested version's postmaster is
    available before trying to start/stop a cluster to avoid errors when a
    server package is removed, but not purged. Closes: #343730

 -- Martin Pitt <mpitt@debian.org>  Thu, 22 Dec 2005 18:41:23 +0100

postgresql-common (37) unstable; urgency=low

  * debian/postgresql-common.config: Only show the obsolete version warning
    once.
  * Add French debconf translations, thanks to Guilhelm Panaget.
    Closes: #340200, #341267
  * debian/postgresql-common.postinst: Change default permissions of the
    private SSL key to root:postgres 0640 to prevent potential modification of
    the certificate by the postmaster. Closes: #341141
  * Add Czech debconf translations, thanks to Miroslav Kure. Closes: #341951
  * debian/postgresql-common.postinst: Check that the postgres user/group is
    not root; fail installation with a meaningful error message if it is.
    Closes: #340459
  * t/040_upgrade.t: Check upgrading of sequence and stored PL/PgSQL
    procedure.
  * pg_upgradecluster: Change hardcoded and obsolete library paths to
    '$libdir' in the new cluster. This fixes upgrades of 7.4 clusters that
    were upgraded from woody. Closes: #338031

 -- Martin Pitt <mpitt@debian.org>  Sat, 10 Dec 2005 23:36:41 +0100
