@@ -2,8 +2,12 @@ postgresql-common (39) unstable; urgency=low
 
   * Add t/090_multicluster.t: Test multicluster operation and environment
     variable handling (PGCLUSTER, PGPORT).
+  * pg_upgradecluster: When upgrading from < 8.1 to >= 8.1, check for users
+    and groups with the same name and abort if there are any. Closes: #343622
+  * t/040_upgrade.t: Add self test for above bug (clashing role names on
+    upgrade).
 
- -- Martin Pitt <mpitt@debian.org>  Thu, 29 Dec 2005 19:39:16 +0100
+ -- Martin Pitt <mpitt@debian.org>  Thu, 29 Dec 2005 23:16:06 +0100
 
 postgresql-common (38) unstable; urgency=low
 
